--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -4650,10 +4650,10 @@ count time)}
 
 \textbf{Prepare for second back extraction}
 \begin{todolist}
-\item{Transfer into glovebox $\boxed{8\ orB\ C}$,
+\item[\done]{Transfer into glovebox $\boxed{8\ orB\ C}$,
   $\boxed{9\ orB\ C}$, $\boxed{10\ orB\ C}$,
-  $\boxed{10\ aqB\ C}$, in 15 ml centrifuge tubes}
-\item{Label vials,
+  in 15 ml centrifuge tubes, parafilm wrapped, in plastic bag}
+\item[\done]{Label vials,
   $\boxed{8\ aqBII}$,
   $\boxed{8\ aqBII\ C}$,  $\boxed{8\ orBII}$ (special) \smiley,
   $\boxed{8\ orBII\ C}$
@@ -4673,7 +4673,7 @@ count time)}
     $\boxed{10\ mixBII}$ (smaller 1 ml tubes from John Burns,
     have conical bottoms, makes more minute separations easier)}
 
-\item{Transfer:   $\boxed{8\ aqBII}$,
+\item[\done]{Transfer:   $\boxed{8\ aqBII}$,
   $\boxed{8\ aqBII\ C}$,  $\boxed{8\ orBII}$ (special) \smiley,
   $\boxed{8\ orBII\ C}$
   $\boxed{9\ aqBII}$,
@@ -4692,23 +4692,29 @@ count time)}
     $\boxed{10\ mixBII}$
   with
   (3 clear push caps, and 12 blue push caps
-  6 red push caps) into glovebox in large plastic bag}
+  3 red push caps) into glovebox in large plastic bag}
 \end{todolist}
 \textbf{Combine all organic phases}
 
 \begin{todolist}  
-\item{Transfer $\boxed{8\ OrB\ C}$ into $\boxed{8\ OrB}$}
-\item{Transfer $\boxed{9\ OrB\ C}$ into $\boxed{9\ OrB}$}
-\item{Transfer $\boxed{10\ OrB\ C}$ into $\boxed{10\ OrB}$}
+\item[\done]{Transfer $\boxed{8\ OrB\ C}$ into $\boxed{8\ OrB}$}
+\item[\done]{Transfer $\boxed{9\ OrB\ C}$ into $\boxed{9\ OrB}$}
+\item[\done]{Transfer $\boxed{10\ OrB\ C}$ into $\boxed{10\ OrB}$}
+\end{todolist}
   
+\textbf{\st{Combine all aqueous phases (still counting)}}
+\begin{todolist}
 \item{Transfer $\boxed{8\ AqB\ C}$ into $\boxed{8\ AqB}$}
 \item{Transfer $\boxed{9\ AqB\ C}$ into $\boxed{9\ AqB}$}
 \item{Transfer $\boxed{10\ AqB\ C}$ into $\boxed{10\ AqB}$}
-  
-\item{Centrifuge $\boxed{8\ OrB}$, $\boxed{9\ OrB}$,
+\end{todolist}
+
+\textbf{Measure volume of organic phases}
+\begin{todolist}
+\item[\done]{Centrifuge $\boxed{8\ OrB}$, $\boxed{9\ OrB}$,
   $\boxed{10\ OrB}$ for 2,500 rpm. 4 minutes to get liquid to
   bottom}
-\item{Measure volumes of all organic phases, $\boxed{8\ OrB}$
+\item[\done]{Measure volumes of all organic phases, $\boxed{8\ OrB}$
      $\boxed{9\ OrB}$, $\boxed{10\ OrB}$}
 \begin{table}[H]
   \begin{center}
@@ -4716,9 +4722,266 @@ count time)}
     \begin{tabular}{l l l}
       \toprule
       Series & Organic (8,9, or 10)\\ 
-      8 & XXX\\
-      9 & XXX\\
-      10 & XXX\\
+      8 & 760\\
+      9 & 765\\
+      10 & 770\\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}  
+\end{todolist}
+
+Create an Fe solution for a back extraction, $\boxed{Fe\ Prep}$
+(Small portions created right before the experiment because this
+solution has a short half life with larger concentrations of $HNO_3$).
+
+\begin{todolist}
+\item[\done]{-}
+\end{todolist}
+\begin{center}
+0.0417+/-0.0018 ml of 2.302+/-0.009 M Fe(II) in 0.0+/-0 M HNO\tsbs{3} $\boxed{Stock\ Fe(II)}$\\
++\\
+3.941+/-0.027 ml of 0.0+/-0 M Fe(II) in 4.06+/-0.05 M HNO\tsbs{3} solution $\boxed{Fe\ Prep}$\\
++\\
+4.000+/-0.020 ml of 0.0240+/-0.0010 M Fe(II) in 4.00+/-0.05 M HNO\tsbs{3} solution $\boxed{\rightarrow Bk\ Ex\ Solution}$.
+\end{center}
+
+\textbf{Actual Back extraction}
+
+\begin{todolist}
+\item[\done]{Add 760 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{8\ orB}$}
+\item[\done]{Add 765 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{9\ orB}$}
+\item[\done]{Add 770 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+  to $\boxed{10\ orB}$}
+\item[\done]{Vortex mix $\boxed{8\ orB}$
+  for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{9\ orB}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{10\ orB}$ for 15 minutes on pulse mode}
+
+\item[\done]{Centrifuge $\boxed{8\ orB}$, $\boxed{9\ orB}$,
+  and $\boxed{10\ orB}$
+  with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
+
+\item[\done]{Pipette with disposable pipette the organic phase
+  first, then the aqueous (for all three vials),
+  (also used different disposable pipettes for the
+  different phases - no contamination)
+  as much as so that there is no mixing.
+  Then transferred the boundary to a smaller vial,
+  centrifuge, then transfer the rest.
+  Prepare counting solutions of 500 $\mu$l of each of the solutions
+  A picture will be provided for the whole process for
+  some step for series 8,
+  on the following page (picture is of a previous experiment,
+  but same process)
+  , also make dilution of each of the phases. Directly below
+  are notes for what happened in the initial transfer,
+  and below that are notes for the dilution. Also after
+  dilution and counting solutions are made, combine all remaining
+  aqueous solution into $\boxed{8\ aqB}$, $\boxed{9\ aqB}$,
+  or $\boxed{10\ aqB}$. }
+  \begin{itemize}
+  \item{$\boxed{10\ AqBII\ C}$ probably doesn't have 500 $\mu$l
+  maybe 480-495}
+  \end{itemize}
+  
+\item[\done]{Make dilution of each aqueous}
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ aqBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ aqBII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{8\ aqBII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ aqBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ aqBII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{9\ aqBII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ aqBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ aqBII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{10\ aqBII\ Dilution}$
+  \end{center}
+
+\item[\done]{Make dilution of each organic phase}
+  \begin{todolist}
+  \item[\done]{- $\boxed{8\ orBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ orBII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{8\ orBII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{9\ orBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ orBII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{9\ orBII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item[\done]{- $\boxed{10\ orBII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ orBII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of DI water $\boxed{10\ orBII\ Dilution}$
+  \end{center}
+ 
+\item[\done]{Transfer out $\boxed{8\ orBII\ C}$, $\boxed{8\ aqBII\ C}$,
+  $\boxed{9\ orBII\ C}$, $\boxed{9\ aqBII\ C}$, $\boxed{10\ orBII\ C}$,
+  $\boxed{10\ aqBII\ C}$, in 15 ml centrifuge tubes}
+\item{Clean stuff in glovebox}
+\item[\done]{Radiac wash the above tubes, and store in fumehood behind
+  lead - wait to count}
+\item[\done]{Centrifuge $\boxed{8\ orBII\ C}$, $\boxed{8\ aqBII\ C}$,
+  $\boxed{9\ orBII\ C}$, $\boxed{9\ aqBII\ C}$, $\boxed{10\ orBII\ C}$,
+  $\boxed{10\ aqBII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
+  bottom, then parafilm wrap all the vials and store in fumehood.}
+\end{todolist}
+\textbf{Counting}
+\begin{todolist}
+\item[\done]{Stop count $\boxed{9\ OrBII\ C}$ around 10:00 pm}
+\item[\done]{Start count $\boxed{10\ OrBII\ C}$ around 10:00pm}
+\end{todolist}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2_extraction_3}
+\end{center}
+\caption{Back extraction I, (different vial names, same procedure)}
+\label{fig:round2_extraction3}
+\end{figure}
+
+
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Tuesday 20, December 2016}
+
+\experiment{Process_X3}
+
+\textbf{Counting}
+\begin{todolist}
+\item{Stop count for $\boxed{10\ OrBII\ C}$}
+\item{Start count for $\boxed{10\ AqB\ C}$ (finish out
+back extraction aqueous counts)}
+\end{todolist}
+
+\textbf{Prepare for third back extraction}
+\begin{todolist}
+\item{Transfer into glovebox $\boxed{8\ orBII\ C}$,
+  $\boxed{9\ orBII\ C}$, $\boxed{10\ orBII\ C}$,
+  in 15 ml centrifuge tubes, parafilm wrapped, in plastic bag}
+\item{Label vials,
+  $\boxed{8\ aqBIII}$,
+  $\boxed{8\ aqBIII\ C}$,  $\boxed{8\ orBIII}$ (special) \smiley,
+  $\boxed{8\ orBIII\ C}$
+  $\boxed{9\ aqBIII}$,
+  $\boxed{9\ aqBIII\ C}$,  $\boxed{9\ orBIII}$ (special),
+  $\boxed{9\ orBIII\ C}$
+  $\boxed{10\ aqBIII}$, $\boxed{10\ aqBIII\ C}$,
+  $\boxed{10\ orBIII}$ (special),
+  $\boxed{10\ orBIII\ C}$,
+  $\boxed{8\ aqBIII\ Dilution}$,
+  $\boxed{9\ aqBIII\ Dilution}$,
+  $\boxed{10\ aqBIII\ Dilution}$,
+  $\boxed{8\ orBIII\ Dilution}$,
+  $\boxed{9\ orBIII\ Dilution}$,
+  $\boxed{10\ orBIII\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixBIII}$, $\boxed{9\ mixBIII}$,
+    $\boxed{10\ mixBIII}$ (smaller 1 ml tubes from John Burns,
+    have conical bottoms, makes more minute separations easier)}
+
+\item{Transfer:   $\boxed{8\ aqBIII}$,
+  $\boxed{8\ aqBIII\ C}$,  $\boxed{8\ orBIII}$ (special) \smiley,
+  $\boxed{8\ orBIII\ C}$
+  $\boxed{9\ aqBIII}$,
+  $\boxed{9\ aqBIII\ C}$,  $\boxed{9\ orBIII}$ (special),
+  $\boxed{9\ orBIII\ C}$
+  $\boxed{10\ aqBIII}$, $\boxed{10\ aqBIII\ C}$,
+  $\boxed{10\ orBIII}$ (special),
+  $\boxed{10\ orBIII\ C}$,
+  $\boxed{8\ aqBIII\ Dilution}$,
+  $\boxed{9\ aqBIII\ Dilution}$,
+  $\boxed{10\ aqBIII\ Dilution}$,
+  $\boxed{8\ orBIII\ Dilution}$,
+  $\boxed{9\ orBIII\ Dilution}$,
+  $\boxed{10\ orBIII\ Dilution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixBIII}$, $\boxed{9\ mixBIII}$,
+    $\boxed{10\ mixBIII}$
+  with
+  (3 clear push caps, and 12 blue push caps
+  3 red push caps) into glovebox in large plastic bag}
+\end{todolist}
+\textbf{Combine all organic phases}
+
+\begin{todolist}  
+\item{Transfer $\boxed{8\ OrBII\ C}$ into $\boxed{8\ OrBII}$}
+\item{Transfer $\boxed{9\ OrBII\ C}$ into $\boxed{9\ OrBII}$}
+\item{Transfer $\boxed{10\ OrBII\ C}$ into $\boxed{10\ OrBII}$}
+\end{todolist}
+  
+\textbf{\st{Combine all aqueous phases (still counting them)}}
+\begin{todolist}
+\item{Transfer $\boxed{8\ AqBII\ C}$ into $\boxed{8\ AqBII}$}
+\item{Transfer $\boxed{9\ AqBII\ C}$ into $\boxed{9\ AqBII}$}
+\item{Transfer $\boxed{10\ AqBII\ C}$ into $\boxed{10\ AqBII}$}
+\end{todolist}
+
+\textbf{Measure volume of organic phases}
+\begin{todolist}
+\item{Centrifuge $\boxed{8\ OrBII}$, $\boxed{9\ OrBII}$,
+  $\boxed{10\ OrBII}$ for 2,500 rpm. 4 minutes to get liquid to
+  bottom}
+\item{Measure volumes of all organic phases, $\boxed{8\ OrBII}$
+     $\boxed{9\ OrBII}$, $\boxed{10\ OrBII}$}
+\begin{table}[H]
+  \begin{center}
+    \caption{Volumes for combined organic phases}
+    \begin{tabular}{l l l}
+      \toprule
+      Series & Organic (8,9, or 10)\\ 
+      8 & \\
+      9 & \\
+      10 & \\
       \bottomrule
     \end{tabular}
   \end{center}
@@ -4744,18 +5007,18 @@ solution has a short half life with larger concentrations of $HNO_3$).
 
 \begin{todolist}
 \item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
-  to $\boxed{8\ orB}$}
+  to $\boxed{8\ orBII}$}
 \item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
-  to $\boxed{9\ orB}$}
+  to $\boxed{9\ orBII}$}
 \item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
-  to $\boxed{10\ orB}$}
-\item{Vortex mix $\boxed{8\ orB}$
+  to $\boxed{10\ orBII}$}
+\item{Vortex mix $\boxed{8\ orBII}$
   for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{9\ orB}$ for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{10\ orB}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{9\ orBII}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{10\ orBII}$ for 15 minutes on pulse mode}
 
-\item{Centrifuge $\boxed{8\ orB}$, $\boxed{9\ orB}$,
-  and $\boxed{10\ orB}$
+\item{Centrifuge $\boxed{8\ orBII}$, $\boxed{9\ orBII}$,
+  and $\boxed{10\ orBII}$
   with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
 
 \item{Pipette with disposable pipette the organic phase
@@ -4782,88 +5045,92 @@ solution has a short half life with larger concentrations of $HNO_3$).
   
 \item{Make dilution of each aqueous}
   \begin{todolist}
-  \item{- $\boxed{8\ aqBII}$}
+  \item{- $\boxed{8\ aqBIII}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{8\ aqBII}$
+    10+/-0.3 $\mu$l of $\boxed{8\ aqBIII}$
     (4 M HNO\tsbs{3}) [smaller pipette]\\
     +\\
     990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{8\ aqBII\ Dilution}$
+    0 M HNO\tsbs{3} $\boxed{8\ aqBIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ aqBII}$}
+  \item{- $\boxed{9\ aqBIII}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{9\ aqBII}$
+    10+/-0.3 $\mu$l of $\boxed{9\ aqBIII}$
     (4 M HNO\tsbs{3}) [smaller pipette]\\
     +\\
     990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{9\ aqBII\ Dilution}$
+    0 M HNO\tsbs{3} $\boxed{9\ aqBIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ aqBII}$}
+  \item{- $\boxed{10\ aqBIII}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{10\ aqBII}$
+    10+/-0.3 $\mu$l of $\boxed{10\ aqBIII}$
     (4 M HNO\tsbs{3}) [smaller pipette]\\
     +\\
     990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
     =\\
     1.0+/-0.006 ml of $\sim$
-    0 M HNO\tsbs{3} $\boxed{10\ aqBII\ Dilution}$
+    0 M HNO\tsbs{3} $\boxed{10\ aqBIII\ Dilution}$
   \end{center}
 
 \item{Make dilution of each organic phase}
   \begin{todolist}
-  \item{- $\boxed{8\ orBII}$}
+  \item{- $\boxed{8\ orBIII}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{8\ orBII}$
+    10+/-0.3 $\mu$l of $\boxed{8\ orBIII}$
     (30\% TBP) [smaller pipette]\\
     +\\
     990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of DI water $\boxed{8\ orBII\ Dilution}$
+    1.0+/-0.006 ml of DI water $\boxed{8\ orBIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ orBII}$}
+  \item{- $\boxed{9\ orBIII}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{9\ orBII}$
+    10+/-0.3 $\mu$l of $\boxed{9\ orBIII}$
     (30\% TBP) [smaller pipette]\\
     +\\
     990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of DI water $\boxed{9\ orBII\ Dilution}$
+    1.0+/-0.006 ml of DI water $\boxed{9\ orBIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ orBII}$}
+  \item{- $\boxed{10\ orBIII}$}
   \end{todolist}
   \begin{center}
-    10+/-0.3 $\mu$l of $\boxed{10\ orBII}$
+    10+/-0.3 $\mu$l of $\boxed{10\ orBIII}$
     (30\% TBP) [smaller pipette]\\
     +\\
     990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
     =\\
-    1.0+/-0.006 ml of DI water $\boxed{10\ orBII\ Dilution}$
+    1.0+/-0.006 ml of DI water $\boxed{10\ orBIII\ Dilution}$
   \end{center}
  
-\item{Transfer out $\boxed{8\ orBII\ C}$, $\boxed{8\ aqBII\ C}$,
-  $\boxed{9\ orBII\ C}$, $\boxed{9\ aqBII\ C}$, $\boxed{10\ orBII\ C}$,
-  $\boxed{10\ aqBII\ C}$, in 15 ml centrifuge tubes}
+\item{Transfer out $\boxed{8\ orBIII\ C}$, $\boxed{8\ aqBIII\ C}$,
+  $\boxed{9\ orBIII\ C}$, $\boxed{9\ aqBIII\ C}$, $\boxed{10\ orBIII\ C}$,
+  $\boxed{10\ aqBIII\ C}$, in 15 ml centrifuge tubes}
 \item{Clean stuff in glovebox}
 \item{Radiac wash the above tubes, and store in fumehood behind
   lead - wait to count}
-\item{Centrifuge $\boxed{8\ orBII\ C}$, $\boxed{8\ aqBII\ C}$,
-  $\boxed{9\ orBII\ C}$, $\boxed{9\ aqBII\ C}$, $\boxed{10\ orBII\ C}$,
-  $\boxed{10\ aqBII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
+\item{Centrifuge $\boxed{8\ orBIII\ C}$, $\boxed{8\ aqBIII\ C}$,
+  $\boxed{9\ orBIII\ C}$, $\boxed{9\ aqBIII\ C}$, $\boxed{10\ orBIII\ C}$,
+  $\boxed{10\ aqBIII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
   bottom, then parafilm wrap all the vials and store in fumehood.}
-\item{Start count $\boxed{8\ OrBII\ C}$} 
+\end{todolist}
+\textbf{Counting}
+\begin{todolist}
+\item{Stop count $\boxed{10\ AqB\ C}$}
+\item{Start count $\boxed{8\ OrBIII\ C}$}
 \end{todolist}
 
 \begin{figure}[H] % Example of including images
