--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -4900,17 +4900,17 @@ solution has a short half life with larger concentrations of $HNO_3$).
 
 \textbf{Counting}
 \begin{todolist}
-\item{Stop count for $\boxed{10\ OrBII\ C}$}
-\item{Start count for $\boxed{10\ AqB\ C}$ (finish out
+\item[\done]{Stop count for $\boxed{10\ OrBII\ C}$}
+\item[\done]{Start count for $\boxed{10\ AqB\ C}$ (finish out
 back extraction aqueous counts)}
 \end{todolist}
 
 \textbf{Prepare for third back extraction}
 \begin{todolist}
-\item{Transfer into glovebox $\boxed{8\ orBII\ C}$,
+\item[\done]{Transfer into glovebox $\boxed{8\ orBII\ C}$,
   $\boxed{9\ orBII\ C}$, $\boxed{10\ orBII\ C}$,
   in 15 ml centrifuge tubes, parafilm wrapped, in plastic bag}
-\item{Label vials,
+\item[\done]{Label vials,
   $\boxed{8\ aqBIII}$,
   $\boxed{8\ aqBIII\ C}$,  $\boxed{8\ orBIII}$ (special) \smiley,
   $\boxed{8\ orBIII\ C}$
@@ -4930,7 +4930,7 @@ back extraction aqueous counts)}
     $\boxed{10\ mixBIII}$ (smaller 1 ml tubes from John Burns,
     have conical bottoms, makes more minute separations easier)}
 
-\item{Transfer:   $\boxed{8\ aqBIII}$,
+\item[\done]{Transfer:   $\boxed{8\ aqBIII}$,
   $\boxed{8\ aqBIII\ C}$,  $\boxed{8\ orBIII}$ (special) \smiley,
   $\boxed{8\ orBIII\ C}$
   $\boxed{9\ aqBIII}$,
@@ -4950,13 +4950,14 @@ back extraction aqueous counts)}
   with
   (3 clear push caps, and 12 blue push caps
   3 red push caps) into glovebox in large plastic bag}
+\item[\done]{Transfer in disposable pipettes and small pipettes}
 \end{todolist}
 \textbf{Combine all organic phases}
 
 \begin{todolist}  
-\item{Transfer $\boxed{8\ OrBII\ C}$ into $\boxed{8\ OrBII}$}
-\item{Transfer $\boxed{9\ OrBII\ C}$ into $\boxed{9\ OrBII}$}
-\item{Transfer $\boxed{10\ OrBII\ C}$ into $\boxed{10\ OrBII}$}
+\item[\done]{Transfer $\boxed{8\ OrBII\ C}$ into $\boxed{8\ OrBII}$}
+\item[\done]{Transfer $\boxed{9\ OrBII\ C}$ into $\boxed{9\ OrBII}$}
+\item[\done]{Transfer $\boxed{10\ OrBII\ C}$ into $\boxed{10\ OrBII}$}
 \end{todolist}
   
 \textbf{\st{Combine all aqueous phases (still counting them)}}
@@ -4968,10 +4969,10 @@ back extraction aqueous counts)}
 
 \textbf{Measure volume of organic phases}
 \begin{todolist}
-\item{Centrifuge $\boxed{8\ OrBII}$, $\boxed{9\ OrBII}$,
+\item[\done]{Centrifuge $\boxed{8\ OrBII}$, $\boxed{9\ OrBII}$,
   $\boxed{10\ OrBII}$ for 2,500 rpm. 4 minutes to get liquid to
   bottom}
-\item{Measure volumes of all organic phases, $\boxed{8\ OrBII}$
+\item[\done]{Measure volumes of all organic phases, $\boxed{8\ OrBII}$
      $\boxed{9\ OrBII}$, $\boxed{10\ OrBII}$}
 \begin{table}[H]
   \begin{center}
@@ -4979,9 +4980,9 @@ back extraction aqueous counts)}
     \begin{tabular}{l l l}
       \toprule
       Series & Organic (8,9, or 10)\\ 
-      8 & \\
-      9 & \\
-      10 & \\
+      8 & 618 \\
+      9 & 620\\
+      10 & 621\\
       \bottomrule
     \end{tabular}
   \end{center}
@@ -4993,7 +4994,7 @@ Create an Fe solution for a back extraction, $\boxed{Fe\ Prep}$
 solution has a short half life with larger concentrations of $HNO_3$).
 
 \begin{todolist}
-\item{-}
+\item[\done]{-}
 \end{todolist}
 \begin{center}
 0.0417+/-0.0018 ml of 2.302+/-0.009 M Fe(II) in 0.0+/-0 M HNO\tsbs{3} $\boxed{Stock\ Fe(II)}$\\
@@ -5006,29 +5007,29 @@ solution has a short half life with larger concentrations of $HNO_3$).
 \textbf{Actual Back extraction}
 
 \begin{todolist}
-\item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+\item[\done]{Add 618 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
   to $\boxed{8\ orBII}$}
-\item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+\item[\done]{Add 622 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
   to $\boxed{9\ orBII}$}
-\item{Add XXX $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
+\item[\done]{Add 621 $\mu$l of $\boxed{\rightarrow Bk\ Ex\ Solution}$
   to $\boxed{10\ orBII}$}
-\item{Vortex mix $\boxed{8\ orBII}$
+\item[\done]{Vortex mix $\boxed{8\ orBII}$
   for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{9\ orBII}$ for 15 minutes on pulse mode}
-\item{Vortex mix $\boxed{10\ orBII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{9\ orBII}$ for 15 minutes on pulse mode}
+\item[\done]{Vortex mix $\boxed{10\ orBII}$ for 15 minutes on pulse mode}
 
-\item{Centrifuge $\boxed{8\ orBII}$, $\boxed{9\ orBII}$,
+\item[\done]{Centrifuge $\boxed{8\ orBII}$, $\boxed{9\ orBII}$,
   and $\boxed{10\ orBII}$
   with $\boxed{Buddy}$ on 3300 rpm, for 10 minutes}
 
-\item{Pipette with disposable pipette the organic phase
+\item[\done]{Pipette with disposable pipette the organic phase
   first, then the aqueous (for all three vials),
   (also used different disposable pipettes for the
   different phases - no contamination)
   as much as so that there is no mixing.
   Then transferred the boundary to a smaller vial,
   centrifuge, then transfer the rest.
-  Prepare counting solutions of 500 $\mu$l of each of the solutions
+  Prepare counting solutions of 400 $\mu$l of each of the solutions
   A picture will be provided for the whole process for
   some step for series 8,
   on the following page (picture is of a previous experiment,
@@ -5040,12 +5041,16 @@ solution has a short half life with larger concentrations of $HNO_3$).
   aqueous solution into $\boxed{8\ aqB}$, $\boxed{9\ aqB}$,
   or $\boxed{10\ aqB}$. }
   \begin{itemize}
-  \item{some notes    \vspace{3cm}}
+  \item{Dropped $\boxed{10\ OrIIB}$ (after initial centi,
+    so centrifuged again for 5 minutes at 2500 rpm)}
+  \item{Interfece of 8 series dropped. fell on paper towels
+    after the incident transfered all interfaces into
+    a single mix smaller vial}
   \end{itemize}
   
-\item{Make dilution of each aqueous}
+\item[\done]{Make dilution of each aqueous}
   \begin{todolist}
-  \item{- $\boxed{8\ aqBIII}$}
+  \item[\done]{- $\boxed{8\ aqBIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{8\ aqBIII}$
@@ -5057,7 +5062,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
     0 M HNO\tsbs{3} $\boxed{8\ aqBIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ aqBIII}$}
+  \item[\done]{- $\boxed{9\ aqBIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{9\ aqBIII}$
@@ -5069,7 +5074,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
     0 M HNO\tsbs{3} $\boxed{9\ aqBIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ aqBIII}$}
+  \item[\done]{- $\boxed{10\ aqBIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{10\ aqBIII}$
@@ -5081,9 +5086,9 @@ solution has a short half life with larger concentrations of $HNO_3$).
     0 M HNO\tsbs{3} $\boxed{10\ aqBIII\ Dilution}$
   \end{center}
 
-\item{Make dilution of each organic phase}
+\item[\done]{Make dilution of each organic phase}
   \begin{todolist}
-  \item{- $\boxed{8\ orBIII}$}
+  \item[\done]{- $\boxed{8\ orBIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{8\ orBIII}$
@@ -5094,7 +5099,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
     1.0+/-0.006 ml of DI water $\boxed{8\ orBIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{9\ orBIII}$}
+  \item[\done]{- $\boxed{9\ orBIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{9\ orBIII}$
@@ -5105,7 +5110,7 @@ solution has a short half life with larger concentrations of $HNO_3$).
     1.0+/-0.006 ml of DI water $\boxed{9\ orBIII\ Dilution}$
   \end{center}
   \begin{todolist}
-  \item{- $\boxed{10\ orBIII}$}
+  \item[\done]{- $\boxed{10\ orBIII}$}
   \end{todolist}
   \begin{center}
     10+/-0.3 $\mu$l of $\boxed{10\ orBIII}$
@@ -5116,21 +5121,21 @@ solution has a short half life with larger concentrations of $HNO_3$).
     1.0+/-0.006 ml of DI water $\boxed{10\ orBIII\ Dilution}$
   \end{center}
  
-\item{Transfer out $\boxed{8\ orBIII\ C}$, $\boxed{8\ aqBIII\ C}$,
+\item[\done]{Transfer out $\boxed{8\ orBIII\ C}$, $\boxed{8\ aqBIII\ C}$,
   $\boxed{9\ orBIII\ C}$, $\boxed{9\ aqBIII\ C}$, $\boxed{10\ orBIII\ C}$,
   $\boxed{10\ aqBIII\ C}$, in 15 ml centrifuge tubes}
-\item{Clean stuff in glovebox}
+\item[\done]{Clean stuff in glovebox}
 \item{Radiac wash the above tubes, and store in fumehood behind
   lead - wait to count}
-\item{Centrifuge $\boxed{8\ orBIII\ C}$, $\boxed{8\ aqBIII\ C}$,
+\item[\done]{Centrifuge $\boxed{8\ orBIII\ C}$, $\boxed{8\ aqBIII\ C}$,
   $\boxed{9\ orBIII\ C}$, $\boxed{9\ aqBIII\ C}$, $\boxed{10\ orBIII\ C}$,
   $\boxed{10\ aqBIII\ C}$, for 2 minutes 4,400 rpm to put all liquid at
   bottom, then parafilm wrap all the vials and store in fumehood.}
 \end{todolist}
 \textbf{Counting}
 \begin{todolist}
-\item{Stop count $\boxed{10\ AqB\ C}$}
-\item{Start count $\boxed{8\ OrBIII\ C}$}
+\item[\done]{Stop count $\boxed{10\ AqB\ C}$}
+\item[\done]{Start count $\boxed{8\ OrBIII\ C}$}
 \end{todolist}
 
 \begin{figure}[H] % Example of including images
@@ -5141,6 +5146,21 @@ solution has a short half life with larger concentrations of $HNO_3$).
 \caption{Back extraction I, (different vial names, same procedure)}
 \label{fig:round2_extraction3}
 \end{figure}
+
+
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Wednesday 21 December 2016, to January 5th, 2017}
+
+\experiment{Process_X3}
+
+\textbf{Counting}
+
+Counting of all the samples.
+
 
 
 %----------------------------------------------------------------------
