--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -117,6 +117,10 @@
 \newexperiment{Cycle_X3_round_2_alpha_ex2}{Cycle experiment, round 2,
   replicate of 3, ALPHA EXTRACTION II (also Mass Spec preparation)}
 \newexperiment{ToCheckout}{Things to Check}
+\newexperiment{Alpha_and_MassSpec}{Prepare Alpha chips for counting,
+  the mass spec solutions for shipping, count the final combined aqueous
+  phases}
+\newexperiment{CHEMLAB}{Work that is paying me this semester}
 \newexperiment{Buy}{Things we need to buy}
 %\newexperiment{shorthand}{Description of the experiment}
 
@@ -5159,7 +5163,45 @@ solution has a short half life with larger concentrations of $HNO_3$).
 
 \textbf{Counting}
 
-Counting of all the samples.
+Counting of all the samples. There were lots of aqueous samples to count.
+
+During this time I also visited family. I completed my incomplete
+for NUEN629, which came about because of a shattered kneecap.
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Wednesday January 18th, 2017}
+
+\experiment{Process_X3}
+
+Analyzed data for experiments. Went to lab meeting and left
+kind of angry, went home to cool off.
+
+%-----------------------------------------------------------------
+%	LAB BOOK day
+%---------------------------------------------------------------
+
+\labday{Thursday January 19th, 2017}
+
+\experiment{Alpha_and_MassSpec}
+
+Make chips...
+
+Transfer all samples to twist cap
+
+Combine final aqueous
+
+Count Final aqueous
+
+Analyze final aqueous
+
+Finish proposal
+
+\experiment{CHEMLAB}
+
+Attend Lab trainning.
 
 
 
