--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -2337,15 +2337,15 @@ uranium saturation to 45\% saturation (reference)
 \end{center}
 \vspace{0.3cm}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dilution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ Dilution}$ dropped onto
   $\boxed{8\ Chip}$
 \end{center}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dilution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ Dilution}$ dropped onto
   $\boxed{9\ Chip}$
 \end{center}
 \begin{center}
-  20+/-0.2 $\mu$l of $\boxed{8,9,19\ aq\ Dilution}$ dropped onto
+  20+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ Dilution}$ dropped onto
   $\boxed{10\ Chip}$
 \end{center}
 \begin{todolist}
@@ -5187,16 +5187,141 @@ kind of angry, went home to cool off.
 
 \experiment{Alpha_and_MassSpec}
 
-Make chips...
+Make chips...First reanalyzed the alpha spec, and now
+the initial results are giving me about what I expect for \tss{239}Pu,
+\tss{240}Pu, and \tss{241}Am. Now will analyze the D values for the
+first extraction. Also note that redoing the alpha calculation took
+all morning from 8-12 today. This included looking up alpha energies that
+would overlap in my alpha spectrum. Analyzing the feasibility of having
+\tss{238}Pu as a contributor in the alpha spectrum. Then doing an estimate
+on what percent of the mass is \tss{238}Pu as opposed to \tss{241}Am.
+Then checking whether the results for mass of \tss{238}Pu and \tss{241}Am
+made sense (which required another estimate - as well as some calculations
+from the mass spec).\\
 
-Transfer all samples to twist cap
+\textbf{Prepare for dilution}
+\begin{todolist}
+\item{Label vials,
+  $\boxed{8,9,10\ DilutionII}$,
+  $\boxed{8\ aq\ DilutionII}$,
+  $\boxed{9\ aq\ DilutionII}$,
+  $\boxed{10\ aq\ DilutionII}$,
+  (smaller twist cap (about 2ml) vials from John Burns)
+  $\boxed{8\ ChipII}$, $\boxed{9\ ChipII}$,
+  $\boxed{10\ ChipII}$,
+  $\boxed{8aq\ ChipII}$,
+  $\boxed{9aq\ ChipII}$,
+  $\boxed{10aq\ ChipII}$,
+  (little chips to dissolve solutions onto)}
+\item{Transfer:
+  $\boxed{8,9,10\ DilutionII}$,
+  $\boxed{8\ aq\ DilutionII}$,
+  $\boxed{9\ aq\ DilutionII}$,
+  $\boxed{10\ aq\ DilutionII}$,
+  with
+  (their own spin cap)
+  $\boxed{8\ ChipII}$, $\boxed{8\ ChipII}$,
+  $\boxed{8\ ChipII}$,
+  $\boxed{8aq\ ChipII}$,
+  $\boxed{9aq\ ChipII}$,
+  $\boxed{10aq\ ChipII}$, into glovebox in large plastic bag}
+\item{Transfer in small pipettes}
+\end{todolist}
 
-Combine final aqueous
+\textbf{Perform Dilution and make chips}
+
+\begin{todolist}
+\item{Main solution Dilution}
+\begin{center}
+  0.5+/-0.0075 ml of $\boxed{8,9,10\ Dilution}$ (0 M HNO\tsbs{3})
+  [smaller pipette]\\
++\\
+0.5+/-0.0075 ml of DI water (leftover in glovebox)\\
+=\\
+1+/-0.01 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8,9,10\ DilutionII}$
+\end{center}
+\vspace{0.3cm}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ DilutionII}$ dropped onto
+  $\boxed{8\ ChipII}$
+\end{center}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ DilutionII}$ dropped onto
+  $\boxed{9\ ChipII}$
+\end{center}
+\begin{center}
+  20+/-0.2 $\mu$l of $\boxed{8,9,10\ aq\ DilutionII}$ dropped onto
+  $\boxed{10\ ChipII}$
+\end{center}
+
+\item{Make second dilution of each aqueous (ExI)}
+  \begin{todolist}
+  \item{- $\boxed{8\ aq}$}
+  \end{todolist}
+  \begin{center}
+    125+/-3.75 $\mu$l of $\boxed{8\ aq\ Dilution}$
+    (0 M HNO\tsbs{3})\\
+    +\\
+    375+/-7.5 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    0.5+/-0.0084 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{8\ aq\ DilutionII}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{9\ aq}$}
+  \end{todolist}
+  \begin{center}
+    125+/-3.75 $\mu$l of $\boxed{9\ aq\ Dilution}$
+    (0 M HNO\tsbs{3})\\
+    +\\
+    375+/-7.5 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    0.5+/-0.0084 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{9\ aqBIII\ Dilution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{10\ aq}$}
+  \end{todolist}
+  \begin{center}
+    125+/-3.75 $\mu$l of $\boxed{10\ aq\ Dilution}$
+    (0 M HNO\tsbs{3})\\
+    +\\
+    375+/-7.5 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    0.5+/-0.0084 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{10\ aqBIII\ Dilution}$
+  \end{center}
+\end{todolist}
+
+\textbf{Count Alpha Sample}
+\begin{todolist}
+\item{Start alpha count $\boxed{8\ ChipII}$}
+\end{todolist}
+
+\textbf{Combine final aqueous}
+\begin{todolist}
+\item{Transfer in glovebox $\boxed{8\ aqBIIIC}$,
+  $\boxed{9\ aqBIIIC}$,
+  $\boxed{10\ aqBIIIC}$,
+  $\boxed{8\ aqBIIC}$,
+  $\boxed{9\ aqBIIC}$,
+  $\boxed{10\ aqBIIC}$,
+  $\boxed{8\ aqBC}$,
+  $\boxed{9\ aqBC}$,
+  $\boxed{10\ aqBC}$}
+\item{Combine all 8, 9 10 solutions into their respective stream
+  in $\boxed{8\ aqB}$, $\boxed{9\ aq}$, and $\boxed{10\ aq}$}
+\item{Transfer out $\boxed{8\ aq}$, $\boxed{9\ aq}$, and $\boxed{10\ aq}$}
+\item{Start count for $\boxed{8\ aq}$}
+\end{todolist}
 
 Count Final aqueous
 
-Analyze final aqueous
 
+
+Transfer all samples to twist cap
+
+Analyze resuls
 Finish proposal
 
 \experiment{CHEMLAB}
